# IGVC2018

./: .gitmodules  CONTRIBUTE.md  LICENSE  README.md  depend
cad_files/: igvc_final_assembly.SLDASM
cad_files/Bottom Frame/: igvc_bottom_frame.SLDPRT  igvc_final_assembly - igvc_bottom_frame-1.STL
cad_files/Emergency Stop/: igvc_emergency_stop.SLDPRT  igvc_final_assembly - igvc_emergency_stop-1.STL
cad_files/Top Frame/: igvc_final_assembly - igvc_top_frame-1.STL  igvc_top_frame.SLDPRT
cad_files/Wheel Base/: igvc_final_assembly - igvc_wheel_base-2.STL  igvc_wheel_base.SLDPRT
igvc_tf2/: CMakeLists.txt  package.xml
igvc_tf2/launch/: lane_broadcaster.launch
igvc_tf2/src/: frames.gv  laser_scan_broadcaster.py
launch_all_baby/: CMakeLists.txt  package.xml
launch_all_baby/launch/: 2d_navigation.launch  camera.launch
motor/: CMakeLists.txt  package.xml
motor/launch/: manual.launch  test.launch
motor/src/: TM4C.ino  gps_waypoints.py  manual_control.py  xbox.py
motor/src/TM4C/: TM4C.ino
mybot_description/: package.xml
mybot_description/launch/: mybot_rviz.launch
mybot_description/meshes/: igvc_final_assembly.STL
mybot_description/rviz/: camera_testing.rviz  test.rviz
mybot_description/urdf/: mybot.gazebo  mybot.xacro  testing.xacro
mybot_gazebo/: package.xml
mybot_gazebo/launch/: igvc_world.launch  mybot_world.launch  testing_world.launch  turtlebot_world.launch
mybot_gazebo/models/: install_models.sh
mybot_gazebo/models/chessboard/: model.config  model.sdf
mybot_gazebo/worlds/: igvc_field.world
mybot_navigation/: package.xml
mybot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
mybot_navigation/launch/: amcl_demo.launch  hector_mapping_demo.launch
mybot_navigation/maps/: test_map.yaml
vision/: CMakeLists.txt  detect.py  package.xml
vision/launch/: camerafeed.launch
vision/msg/: lane_laser.msg
vision/src/: detect.py  laser_scan_publisher.py
vision/src/lane_detection_test/: image_lane_detection_test.py
vision/src/odometry/: mono.py
vn200/: CMakeLists.txt  package.xml
vn200/launch/: imu_launch.launch  waypoint.launch
vn200/msg/: vn_200_accel_gyro_compass.msg  vn_200_gps_soln.msg  vn_200_ins_soln.msg
vn200/src/: imu_listener.py  vn_200_node.py
vn200/src/testing/: alt_mag_compensation.py  gps_testing.py  test.py  yaw_heading_calculation.py
vn_200_imu/: mainpage.dox  manifest.xml
vn_200_imu/msg/: vn_200_gps_soln.msg  vn_200_ins_soln.msg
vn_200_imu/nodes/: vn_200_node.py
(+8 files in other folders)
