<package format="2">
    <name>vision</name>
    <version>0.0.1</version>
    <description>The vision package</description>

    <maintainer email="vivekmalneedi@utexas.edu">Vivek</maintainer>

    <license>MIT</license>

    <author email="vivekmalneedi@utexas.edu">Vivek</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>opencv3</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
</package>
